<!--
  ~ /*
  ~   Copyright (C) 2017 MadInnovations
  ~   <p/>
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~   <p/>
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~   <p/>
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  */
  -->

<resources>
  <string name="app_name">Fat Lip</string>
  <string name="name">Name</string>
  <string name="ok">OK</string>
  <string name="play">Play</string>
  <string name="help">Help</string>
  <string name="instructions">Throw objects at the faces to try to give them a fat lip before time runs out.</string>
  <string name="high_scores">High Scores</string>
  <string name="random">Random</string>
  <string name="select_opponent">Select your opponent: %1$s</string>
  <string name="select_weapon">Select your weapon: %1$s</string>
  <string name="select_scenery">Select your scenery: %1$s</string>
  <string name="start">Start</string>
  <string name="back">Back</string>
  <string name="save">Save</string>
  <string name="select_file">Select file:</string>
  <string name="ellipsis">&#8230;</string>
  <string name="alert_fs_title">Choose a %1$s file:\nCurrent Path = %2$s</string>
  <string name="folder_image">Folder Image</string>
  <string name="import_opponent">Import Opponent</string>
  <string name="import_scenery">Import Scenery</string>
  <string name="import_failure">Import Failure</string>
  <string name="size_error">The image size must be 512x512</string>
  <string name="scenery_min_size_error">The scenery image size must be at least 64 pixels in both dimensions.</string>
  <string name="scenery_max_size_error">The scenery image size must be no more than %1$d pixels in both dimensions.</string>
  <string name="scenery_pow2_size_error">The scenery image size must be a power of 2 pixels in size (e.g. 64, 128, 256, 512, 1024, etc.) in both dimensions.</string>
  <string name="no_face">No face found in the image</string>
  <string name="multiple_faces">The image must have only one face.</string>
  <string name="face_too_small">The face in the image is too small</string>
  <string name="not_two_eyes">Two eyes not found in the image</string>
  <string name="no_mouth">No mouth found in the image</string>
  <string name="face_detector_not_available">Face detector dependencies are not yet available.</string>
  <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
  <string name="save_opponent_success">Your opponent was successfully saved.</string>
  <string name="save_opponent_error">An error occurred when attempting to save your opponent.</string>
  <string name="save_scenery_success">Your scenery was successfully saved.</string>
  <string name="save_scenery_error">An error occurred when attempting to save your scenery.</string>
  <string name="not_png">The image must be a .png file.</string>
  <string name="sign_in_success">You are now signed in to your Google account.</string>
  <string name="sign_in_fail">We were unable to sign in to a Google account. Please try again.</string>
  <string name="opponent_read_fail">Failed to read the opponent bitmap.</string>
  <string name="scenery_read_fail">Failed to read the scenery bitmap.</string>
  <string name="weapon_read_fail">Failed to read the weapon bitmap.</string>
</resources>
