<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2016 MadInnovations
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/import_opponent_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.design.widget.TextInputLayout
      android:id="@+id/name_layout"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/select_file_label"
      app:layout_constraintVertical_chainStyle="packed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/name_edit"
        android:minWidth="200dp"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@id/select_file_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/name_layout"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/select_file_button"
      app:layout_constraintBottom_toTopOf="@+id/face_view"
      app:layout_constraintHorizontal_chainStyle="packed"
      android:text="@string/select_file"/>
  <Button
      android:id="@id/select_file_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/name_layout"
      app:layout_constraintLeft_toRightOf="@id/select_file_label"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@id/face_view"
      android:text="@string/ellipsis"/>

  <com.madinnovations.fatlip.view.views.FaceView
      android:id="@id/face_view"
      android:layout_width="wrap_content"
      android:layout_height="512dp"
      app:layout_constraintTop_toBottomOf="@id/select_file_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/back_button"/>

  <Button
      android:id="@id/back_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/face_view"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/save_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintVertical_chainStyle="spread"
      android:text="@string/back"/>
  <Button
      android:id="@id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="@id/back_button"
      app:layout_constraintLeft_toRightOf="@id/back_button"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="@id/back_button"
      android:text="@string/save"/>
</android.support.constraint.ConstraintLayout>