<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~   Copyright (C) 2017 MadInnovations
  ~   <p/>
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~   <p/>
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~   <p/>
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  */
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/setup_screen_layout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

  <TextView
      android:id="@+id/opponents_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/opponents_spinner"
      android:text="@string/select_opponent"/>

  <HorizontalScrollView
      android:id="@id/opponents_spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/opponents_textview"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/weapons_textview">
    <LinearLayout
        android:id="@+id/opponents_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </LinearLayout>
  </HorizontalScrollView>

  <TextView
      android:id="@id/weapons_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/opponents_spinner"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/weapons_spinner"
      android:text="@string/select_weapon"/>

  <HorizontalScrollView
      android:id="@id/weapons_spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/weapons_textview"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/scenery_textview">
    <LinearLayout
        android:id="@+id/weapons_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </LinearLayout>
  </HorizontalScrollView>

  <TextView
      android:id="@id/scenery_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/weapons_spinner"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/scenery_spinner"
      android:text="@string/select_scenery"/>

  <HorizontalScrollView
      android:id="@id/scenery_spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/scenery_textview"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/back_button">
    <LinearLayout
        android:id="@+id/scenery_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </LinearLayout>
  </HorizontalScrollView>

  <Button
      android:id="@id/back_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/scenery_spinner"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/start_button"
      android:text="@string/back"/>
  <Button
      android:id="@id/start_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/scenery_spinner"
      app:layout_constraintLeft_toRightOf="@id/back_button"
      app:layout_constraintRight_toRightOf="parent"
      android:text="@string/start"/>
</android.support.constraint.ConstraintLayout>